--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -44,7 +44,7 @@
 
         <button id="edit-btn">🛠️ Éditer Seuil</button>
 
-        <div style="max-height: 60vh; overflow: auto;" id="modal-seuil" class="modal">
+        <div style="max-height: 70vh; overflow-y: auto;" id="modal-seuil" class="modal">
             <div class="modal-content">
                 <span class="close-btn" title="Fermer">❌</span>
                 <h2>🔧 Gestion des seuils de stock</h2>
