--- a/html/html.html
+++ b/html/html.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
+  <div id="role-label" class="role-badge"></div>
   <div id="sidebar-container"></div>
+  <input type="text" class="field-entreposage editable-field">
 
   <div id="dashboard" style="display: inline-block;">
     <header>
