--- a/html/sidebard.html
+++ b/html/sidebard.html
@@ -10,12 +10,13 @@
 
 <body>
     <aside class="sidebar">
-        <h2>📦 Entrepôt</h2>
+        <h2> Entrepôt</h2>
         <nav>
             <a href="../html/acceuil.html">🔔 Acceuil</a>
             <a href="../html/Dashboard.html">🧺 Visualiser</a>
             <a href="../html/html.html">⚙️ Entreposage</a>
             <a href="../html/sortie.html">🏢 Rapport</a>
+            <a href="../html/Iventaire.html">📦 Inventaire</a>
         </nav>
         <button id="logout-btn">Deconnexion</button>
     </aside>
