--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -14,29 +14,54 @@
     <div id="admin-panel" style="display: online-block;">
         <button id="refresh-btn">🔄refresh</button>
         <h2>Gestion des Utilisateurs</h2>
-        <form id="user-form" name="user-form">
-            <input type="text" id="user-name" placeholder="Nom" required>
-            <input type="email" id="user-email" placeholder="Email" required>
-            <input type="password" id="user-password" placeholder="Mot de passe" required>
-            <select id="user-role">
-                <option value="admin">Admin</option>
-                <option value="manager">Manager</option>
-                <option value="employee">Employé</option>
-            </select>
-            <button type="button" id="add-user-btn">Ajouter Utilisateur</button>
-            <button type="button" id="res-user-btn">Supp Utilisateur</button>
+        <form id="user-form" name="user-form" autocomplete="off">
+            <div class="form-group">
+                <input type="text" id="user-name" placeholder="Nom complet" required>
+                <input type="email" id="user-email" placeholder="Adresse email" required>
+                <input type="password" id="user-password" placeholder="Mot de passe" required>
+            </div>
+
+            <div class="form-group">
+                <label for="user-role">Rôles :</label>
+                <select id="user-role" multiple>
+                    <option value="admin">Admin</option>
+                    <option value="manager">Manager</option>
+                    <option value="employé">Employé</option>
+                    <option value="auditeur">Auditeur</option>
+                    <option value="invité">Invité</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="user-permissions">Permissions (JSON ou CSV) :</label>
+                <textarea id="user-permissions" placeholder='{"inventaire":["view","edit"]}' rows="3"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="user-active">Compte actif :</label>
+                <input type="checkbox" id="user-active" checked>
+            </div>
+
+            <div class="form-actions">
+                <button type="button" id="add-user-btn">➕ Ajouter</button>
+                <button type="button" id="res-user-btn">🗑️ Supprimer</button>
+            </div>
         </form>
+        <h3>Liste des utilisateurs</h3>
         <table id="user-table">
             <thead>
                 <tr>
                     <th>Nom</th>
                     <th>Email</th>
                     <th>Rôle</th>
+                    <th>Statut</th>
                     <th>Actions</th>
+
                 </tr>
             </thead>
             <tbody></tbody>
         </table>
+
         <div id="notifications">
 
         </div>
@@ -104,30 +129,39 @@
 
         <h2>📦 Fournisseurs</h2>
 
-        <form id="fournisseur-form">
-            <input type="text" id="nom" placeholder="Nom du fournisseur" required>
-            <input type="text" id="contact" placeholder="Contact">
-            <input type="email" id="email" placeholder="Email">
-            <textarea id="adresse" placeholder="Adresse"></textarea>
+        <div class="fournisseur-section">
+            <div class="fourniseur-cadre">
+                <form id="fournisseur-form">
+                    <!-- champs ici -->
 
-            <select id="categorie-select" required>
-                <option value="">-- Choisir une catégorie --</option>
-                <option value="Produits laitiers">Produits laitiers</option>
-                <option value="Céréales">Céréales</option>
-                <option value="Boissons">Boissons</option>
-                <option value="Équipements">Équipements</option>
-            </select>
+                    <input type="text" id="nom" placeholder="Nom du fournisseur" required>
+                    <input type="text" id="contact" placeholder="Contact">
+                    <input type="email" id="email" placeholder="Email">
+                    <textarea id="adresse" placeholder="Adresse"></textarea>
 
-            <button type="submit">Ajouter</button>
-        </form>
-        <div class="cards-container">
-            <div class="fournisseur-card"></div><!-- etc. -->
+                    <select id="categorie-select" required>
+                        <option value="">-- Choisir une catégorie --</option>
+                        <option value="Produits laitiers">Produits laitiers</option>
+                        <option value="Céréales">Céréales</option>
+                        <option value="Boissons">Boissons</option>
+                        <option value="Équipements">Équipements</option>
+                    </select>
+
+                    <button type="submit">Ajouter</button>
+                </form>
+
+            </div>
+
+            <div class="fournisseur-cadre">
+                <div class="cards-container">
+                    <div class="fournisseur-card">Fournisseur 1</div>
+                </div>
+            </div>
         </div>
 
 
-
     </div>
-
+    <script src="../js/sessionStorage.js"></script>
     <script src="../js/notifications.js"></script>
     <script src="../js/utilisateurs.js"></script>
     <script>
