--- a/html/sortie.html
+++ b/html/sortie.html
@@ -9,6 +9,8 @@
 <script src="../libs/chart.umd.js"></script> <!-- 📌 Version locale si installée -->
 
 <body>
+  <textarea class="field-sortie editable-field"></textarea>
+  <div class="role-label"></div>
   <div id="sidebar-container"></div>
   <div class="main">
     <h1>Gestion des Sorties de Stock</h1>
@@ -78,7 +80,7 @@
           const container = document.getElementById("sidebar-container");
           container.innerHTML = html;
 
-          // ⏱️ Attendre que le DOM injecté soit bien interprété
+          //  Attendre que le DOM injecté soit bien interprété
           setTimeout(() => {
             const logoutBtn = document.getElementById("logout-btn");
             if (logoutBtn) {
@@ -88,7 +90,7 @@
                 window.location.href = "../html/PageConnexion.html";
               });
             } else {
-              console.warn("🔍 Bouton #logout-btn introuvable dans sidebard.html");
+              console.warn(" Bouton #logout-btn introuvable dans sidebard.html");
             }
           }, 50); // ← Ajustable selon la complexité du HTML injecté
         });
