--- a/html/sidebard.html
+++ b/html/sidebard.html
@@ -16,7 +16,7 @@
             <a href="../html/Dashboard.html">🧺 Visualiser</a>
             <a href="../html/html.html">⚙️ Entreposage</a>
             <a href="../html/sortie.html">🏢 Rapport</a>
-            <a href="../html/Iventaire.html">📦 Inventaire</a>
+            <a href="../html/Iventaire.html">📦 Inventaire et Plan</a>
         </nav>
         <button id="logout-btn">Deconnexion</button>
     </aside>
