--- a/html/Iventaire.html
+++ b/html/Iventaire.html
@@ -1,121 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/Iventaire.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="../css/Iventaire.css">
+    </head>
 
-<body>
-    <div id="sidebar-container"></div>
-    <select class="field-inventaire editable-field"></select>
-    <div id="role-label" class="role-badge"></div>
+    <body>
+        <div id="sidebar-container"></div>
+        <select class="field-inventaire editable-field"></select>
+        <div id="role-label" class="role-badge"></div>
 
-    <form id="constat-ecart-form">
-        <h2> Constat d’écart en sortie produit</h2>
+        <form id="constat-ecart-form">
+            <h2> Constat d’écart en sortie produit</h2>
 
-        <label for="produit">Produit :</label>
-        <select id="produit" required>
-            <option value="">-- Choisir un produit --</option>
-            <!-- Options dynamiques -->
-        </select>
-
-        <div>Quantité théorique : <span id="quantite-theorique">0</span> kg</div>
-
-        <label for="quantite-observGITee">Quantité réellement disponible :</label>
-        <input type="number" id="quantite-reelle" placeholder="Ex: 750" required>
-
-        <div id="ecart-affichage">Écart : 0 kg</div>
-
-        <textarea id="justification" placeholder="Justification de l’écart (si écart ≠ 0)"></textarea>
-
-        <button type="submit"> Enregistrer le constat</button>
-    </form>
-
-
-    <table id="historique-inventaire">
-        <thead>
-            <tr>
-                <th>Produit</th>
-                <th>Théorique</th>
-                <th>Réel</th>
-                <th>Écart</th>
-                <th>Justification</th>
-                <th>Date</th>
-                <th>Utilisateur</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <form id="planification-form" class="form-planification">
-        <h3>📦 Planifier une livraison</h3>
-
-        <label for="produit-planifie">Produit :</label>
-        <select id="produit-planifie" required>
-            <!-- Options dynamiques via JS -->
-        </select>
-
-        <label>Type :</label>
-        <label><input type="radio" name="type" value="entrée" checked> Entrée</label>
-        <label><input type="radio" name="type" value="sortie"> Sortie</label>
-
-        <label for="quantite-planifiee">Quantité (kg) :</label>
-        <input type="number" id="quantite-planifiee" step="0.01" required>
-
-        <label for="date-prevue">Date prévue :</label>
-        <input type="datetime-local" id="date-prevue" required>
-
-        <label for="commentaire">Commentaire :</label>
-        <textarea id="commentaire" rows="2"></textarea>
-     <label for="fournisseur-planifie">Fournisseur :</label>
-     <select id="fournisseur-planifie">
-         <option value="">-- Sélectionner --</option>
-          <!-- Options dynamiques via JS -->
-     </select>
-
-        <button type="submit">📅 Enregistrer</button>
-    </form>
-
-    <div id="calendrier-planifications">
-        <!-- Calendrier ou tableau des planifications -->
-    </div>
-
-    <div class="table-wrapper">
-        <div class="table-controls">
-            <label for="filtre-statut">Filtrer par statut :</label>
-            <select id="filtre-statut" onchange="filtrerTableau()">
-                <option value="tous">Tous</option>
-                <option value="confirmé">Confirmé</option>
-                <option value="attente">En attente</option>
-                <option value="annulé">Annulé</option>
+            <label for="produit">Produit :</label>
+            <select id="produit" required>
+                <option value>-- Choisir un produit --</option>
+                <!-- Options dynamiques -->
             </select>
-        </div>
 
-        <table class="table-planification" id="table-planification">
+            <div>Quantité théorique : <span id="quantite-theorique">0</span>
+                kg</div>
+
+            <label for="quantite-observGITee">Quantité réellement disponible
+                :</label>
+            <input type="number" id="quantite-reelle" placeholder="Ex: 750"
+                required>
+
+            <div id="ecart-affichage">Écart : 0 kg</div>
+
+            <textarea id="justification"
+                placeholder="Justification de l’écart (si écart ≠ 0)"></textarea>
+
+            <button type="submit"> Enregistrer le constat</button>
+        </form>
+
+        <table id="historique-inventaire">
             <thead>
                 <tr>
-                    <th onclick="trierTableau(0)">📅 Date</th>
-                    <th onclick="trierTableau(1)">🔁 Type</th>
-                    <th onclick="trierTableau(2)">📦 Produit</th>
-                    <th onclick="trierTableau(3)">⚖️ Quantité</th>
-                    <th>🧾 Statut</th>
+                    <th>Produit</th>
+                    <th>Théorique</th>
+                    <th>Réel</th>
+                    <th>Écart</th>
+                    <th>Justification</th>
+                    <th>Date</th>
+                    <th>Utilisateur</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- Lignes dynamiques ici -->
-            </tbody>
+            <tbody></tbody>
         </table>
-    </div>
 
+        <form id="planification-form" class="form-planification">
+            <h3>📦 Planifier une livraison</h3>
 
+            <label for="produit-planifie">Produit :</label>
+            <select id="produit-planifie" required>
+                <!-- Options dynamiques via JS -->
+            </select>
 
-    <script src="../js/sessionStorage.js"></script>
+            <label>Type :</label>
+            <div class="radiob">
+                <select id="type" name="type" onchange="toggleFournisseur()">
+                    <option value="entrée">Entrée</option>
+                    <option value="sortie">Sortie</option>
+                </select>
+            </div>
+            <label for="quantite-planifiee">Quantité (kg) :</label>
+            <input type="number" id="quantite-planifiee" step="0.01" required>
 
-    <script src="../js/Iventaire.js"></script>
-    <script>
+            <label for="date-prevue">Date prévue :</label>
+            <input type="datetime-local" id="date-prevue" required>
+
+            <label for="commentaire">Commentaire :</label>
+            <textarea id="commentaire" rows="2"></textarea>
+            <label for="fournisseur-planifie">Fournisseur :</label>
+            <div id="fournisseur-block" style="display:none;">
+                <select id="fournisseur-planifie">
+                    <option value>-- Sélectionner --</option>
+                    <!-- Options dynamiques via JS -->
+                </select>
+            </div>
+            <button type="submit">📅 Enregistrer</button>
+        </form>
+
+        <div id="calendrier-planifications">
+            <!-- Calendrier ou tableau des planifications -->
+        </div>
+
+        <div class="table-wrapper">
+            <div class="table-controls">
+                <label for="filtre-statut">Filtrer par statut :</label>
+                <select id="filtre-statut" onchange="filtrerTableau()">
+                    <option value="tous">Tous</option>
+                    <option value="confirmé">Confirmé</option>
+                    <option value="attente">En attente</option>
+                    <option value="annulé">Annulé</option>
+                </select>
+            </div>
+
+            <table class="table-planification" id="table-planification">
+                <thead>
+                    <tr>
+                        <th onclick="trierTableau(0)">📅 Date</th>
+                        <th onclick="trierTableau(1)">🔁 Type</th>
+                        <th onclick="trierTableau(2)">📦 Produit</th>
+                        <th onclick="trierTableau(3)">⚖️ Quantité</th>
+                        <th>🧾 Statut</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Lignes dynamiques ici -->
+                </tbody>
+            </table>
+        </div>
+
+        <script src="../js/sessionStorage.js"></script>
+
+        <script src="../js/Iventaire.js"></script>
+        <script>
+           function toggleFournisseur() {
+            const type = document.getElementById('type').value;
+            document.getElementById('fournisseur-block').style.display = (type === 'entrée') ? 'block' : 'none';
+        }
+
         // Place ce code juste après l'injection du sidebar
         fetch("../html/sidebard.html")
             .then(r => r.text())
@@ -139,6 +149,6 @@
             });
 
     </script>
-</body>
+    </body>
 
 </html>
