--- a/html/Iventaire.html
+++ b/html/Iventaire.html
@@ -86,9 +86,8 @@
             <button type="submit">📅 Enregistrer</button>
         </form>
 
-        <div id="calendrier-planifications">
-            <!-- Calendrier ou tableau des planifications -->
-        </div>
+        <div id="calendrier-planifications"></div>
+
 
         <div class="table-wrapper">
             <div class="table-controls">
