--- a/html/sidebard.html
+++ b/html/sidebard.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/Dashboard.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="../css/Dashboard.css">
+      <link rel="stylesheet" href="../vendor/css/all.min.css">
 
-<body>
-    <aside class="sidebar">
-        <h2> Entrepôt</h2>
-        <nav>
-            <a href="../html/acceuil.html">🔔 Acceuil</a>
-            <a href="../html/Dashboard.html">🧺 Visualiser</a>
-            <a href="../html/html.html">⚙️ Entreposage</a>
-            <a href="../html/sortie.html">🏢 Rapport</a>
-            <a href="../html/Iventaire.html">📦 Inventaire et Plan</a>
-        </nav>
-        <button id="logout-btn">Deconnexion</button>
-    </aside>
-</body>
-<script src="../js/login.js"></script>
+    </head>
+
+    <body>
+        <aside class="sidebar">
+            <h2><i class="fas fa-warehouse text-primary"></i> Entrepôt</h2>
+            <nav>
+                <a href="../html/acceuil.html">
+                    <i class="fas fa-home text-info"></i> Accueil
+                </a>
+                <a href="../html/Dashboard.html">
+                    <i class="fas fa-chart-line text-success"></i> Visualiser
+                </a>
+                <a href="../html/html.html">
+                    <i class="fas fa-box-open text-warning"></i> Entreposage
+                </a>
+                <a href="../html/sortie.html">
+                    <i class="fas fa-file-alt text-danger"></i> Rapport
+                </a>
+                <a href="../html/Iventaire.html">
+                    <i class="fas fa-clipboard-list text-secondary"></i>
+                    Inventaire et Plan
+                </a>
+            </nav>
+            <button id="logout-btn">
+                <i class="fas fa-sign-out-alt"></i> Déconnexion
+            </button>
+        </aside>
+
+    </body>
+    <script src="../js/login.js"></script>
 </html>
